--- a/Creative Pod/Base.lproj/Main.storyboard
+++ b/Creative Pod/Base.lproj/Main.storyboard
@@ -8,7 +8,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -111,6 +110,9 @@
                                         <state key="normal" title="Press to Enter a World of Creativity">
                                             <color key="titleColor" red="0.0" green="0.61568627450000002" blue="0.88235294119999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
+                                        <connections>
+                                            <action selector="loggingIn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="k72-D5-sLk"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
@@ -145,6 +147,10 @@
                         <outlet property="loginPicker" destination="tTf-jr-yJi" id="fVM-cT-ewb"/>
                         <outlet property="nameLoginTxtField" destination="Awz-QG-eVY" id="6hn-dt-LSj"/>
                         <outlet property="passwordLoginTxtField" destination="7Xk-82-TZ2" id="3Wq-dv-SZJ"/>
+                        <segue destination="Rpd-ll-zeC" kind="showDetail" identifier="NameList" id="HAK-Fh-9Ct"/>
+                        <segue destination="Fke-k6-P6W" kind="showDetail" identifier="GroupList" id="xVH-VO-OMk"/>
+                        <segue destination="Ijj-DP-x9k" kind="showDetail" identifier="MemberInterface" id="waO-99-5Ib"/>
+                        <segue destination="XsA-aS-wmL" kind="showDetail" identifier="AdminInterface" id="NzT-LY-3fO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -191,11 +197,14 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SVO-IJ-pmz">
-                                <rect key="frame" x="20" y="20" width="45" height="46"/>
+                                <rect key="frame" x="20" y="20" width="78" height="46"/>
                                 <fontDescription key="fontDescription" name="ModeG-Regular" family="Mode G" pointSize="17"/>
-                                <state key="normal" title="BACK">
+                                <state key="normal" title="LOG OUT">
                                     <color key="titleColor" red="0.0" green="0.61568627450000002" blue="0.88235294119999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="backBtnPresssed:" destination="Rpd-ll-zeC" eventType="touchUpInside" id="vnE-5Z-ssl"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -257,11 +266,14 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tH0-wn-XzP">
-                                <rect key="frame" x="20" y="20" width="45" height="46"/>
+                                <rect key="frame" x="20" y="20" width="78" height="46"/>
                                 <fontDescription key="fontDescription" name="ModeG-Regular" family="Mode G" pointSize="17"/>
-                                <state key="normal" title="BACK">
+                                <state key="normal" title="LOG OUT">
                                     <color key="titleColor" red="0.0" green="0.61568627450000002" blue="0.88235294119999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="loggingOut:" destination="Fke-k6-P6W" eventType="touchUpInside" id="X4V-Tj-7X7"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -291,10 +303,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" distribution="fillProportionally" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="oqr-Hu-Gsy">
-                                <rect key="frame" x="10" y="120" width="814" height="808"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="100" translatesAutoresizingMaskIntoConstraints="NO" id="oqr-Hu-Gsy">
+                                <rect key="frame" x="10" y="162" width="814" height="900"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gdz-gq-pSh" customClass="RoundedButton" customModule="Creative_Pod" customModuleProvider="target">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gdz-gq-pSh" customClass="RoundedButton" customModule="Creative_Pod" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="814" height="400"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="400" id="Tbn-s4-Wc0"/>
@@ -304,8 +316,8 @@
                                             <color key="titleColor" red="0.0" green="0.61568627450000002" blue="0.88235294119999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yjv-5N-GHL" customClass="RoundedButton" customModule="Creative_Pod" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="408" width="814" height="400"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yjv-5N-GHL" customClass="RoundedButton" customModule="Creative_Pod" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="500" width="814" height="400"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="400" id="iGp-ln-Kj4"/>
                                         </constraints>
@@ -317,19 +329,24 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f6U-8H-XQS">
-                                <rect key="frame" x="20" y="20" width="45" height="46"/>
+                                <rect key="frame" x="20" y="20" width="212" height="92"/>
                                 <fontDescription key="fontDescription" name="ModeG-Regular" family="Mode G" pointSize="17"/>
-                                <state key="normal" title="BACK">
+                                <state key="normal" title="CLICK HERE TO LOG OUT!">
                                     <color key="titleColor" red="0.0" green="0.61568627450000002" blue="0.88235294119999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="loggingOut:" destination="Ijj-DP-x9k" eventType="touchUpInside" id="17t-M1-Zo6"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="oqr-Hu-Gsy" firstAttribute="top" secondItem="f6U-8H-XQS" secondAttribute="bottom" constant="50" id="0xz-8H-BW6"/>
                             <constraint firstItem="i3G-Ql-QBc" firstAttribute="trailing" secondItem="oqr-Hu-Gsy" secondAttribute="trailing" constant="10" id="1AM-SO-8ls"/>
                             <constraint firstItem="f6U-8H-XQS" firstAttribute="top" secondItem="dt8-FZ-PJQ" secondAttribute="top" constant="20" id="TOs-m8-mpS"/>
                             <constraint firstItem="f6U-8H-XQS" firstAttribute="leading" secondItem="i3G-Ql-QBc" secondAttribute="leading" constant="20" id="x87-IR-2bL"/>
                             <constraint firstItem="oqr-Hu-Gsy" firstAttribute="leading" secondItem="i3G-Ql-QBc" secondAttribute="leading" constant="10" id="xCp-Kt-pRk"/>
+                            <constraint firstItem="i3G-Ql-QBc" firstAttribute="bottom" secondItem="oqr-Hu-Gsy" secondAttribute="bottom" constant="50" id="zab-sL-Obk"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="i3G-Ql-QBc"/>
                     </view>
@@ -346,18 +363,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Pqs-ag-sGq">
-                                <rect key="frame" x="0.0" y="80" width="834" height="1032"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="Pqs-ag-sGq">
+                                <rect key="frame" x="0.0" y="80" width="834" height="1017"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nAF-uc-49F" customClass="RoundedButton" customModule="Creative_Pod" customModuleProvider="target">
-                                        <rect key="frame" x="138.5" y="0.0" width="557" height="516"/>
+                                        <rect key="frame" x="10" y="0.0" width="814" height="483.5"/>
                                         <fontDescription key="fontDescription" name="ModeG-Regular" family="Mode G" pointSize="50"/>
                                         <state key="normal" title="View Creative Pieces">
                                             <color key="titleColor" red="0.0" green="0.61568627450000002" blue="0.88235294119999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wEN-cY-jq2" customClass="RoundedButton" customModule="Creative_Pod" customModuleProvider="target">
-                                        <rect key="frame" x="105" y="516" width="624" height="516"/>
+                                        <rect key="frame" x="10" y="533.5" width="814" height="483.5"/>
                                         <fontDescription key="fontDescription" name="ModeG-Regular" family="Mode G" pointSize="50"/>
                                         <state key="normal" title="View Users and Groups">
                                             <color key="titleColor" red="0.0" green="0.61568627450000002" blue="0.88235294119999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -365,20 +382,29 @@
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="wEN-cY-jq2" firstAttribute="leading" secondItem="Pqs-ag-sGq" secondAttribute="leading" constant="10" id="Gw1-5O-fIk"/>
+                                    <constraint firstAttribute="trailing" secondItem="wEN-cY-jq2" secondAttribute="trailing" constant="10" id="IdW-ld-7Yd"/>
+                                    <constraint firstAttribute="trailing" secondItem="nAF-uc-49F" secondAttribute="trailing" constant="10" id="dls-Qv-BzO"/>
+                                    <constraint firstItem="nAF-uc-49F" firstAttribute="leading" secondItem="Pqs-ag-sGq" secondAttribute="leading" constant="10" id="s9w-XZ-TKE"/>
+                                </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QzA-JH-buL">
-                                <rect key="frame" x="20" y="40" width="45" height="46"/>
+                                <rect key="frame" x="20" y="40" width="78" height="46"/>
                                 <fontDescription key="fontDescription" name="ModeG-Regular" family="Mode G" pointSize="17"/>
-                                <state key="normal" title="BACK">
+                                <state key="normal" title="LOG OUT">
                                     <color key="titleColor" red="0.0" green="0.61568627450000002" blue="0.88235294119999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="loggingOut:" destination="XsA-aS-wmL" eventType="touchUpInside" id="mRq-Gl-NpQ"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Pqs-ag-sGq" firstAttribute="leading" secondItem="n3x-i4-fwd" secondAttribute="leading" id="7OZ-Rb-UFM"/>
                             <constraint firstItem="Pqs-ag-sGq" firstAttribute="top" secondItem="n3x-i4-fwd" secondAttribute="top" constant="60" id="Ab9-V5-0b3"/>
-                            <constraint firstItem="n3x-i4-fwd" firstAttribute="bottom" secondItem="Pqs-ag-sGq" secondAttribute="bottom" id="I0p-i8-DLk"/>
+                            <constraint firstItem="n3x-i4-fwd" firstAttribute="bottom" secondItem="Pqs-ag-sGq" secondAttribute="bottom" constant="15" id="I0p-i8-DLk"/>
                             <constraint firstItem="QzA-JH-buL" firstAttribute="top" secondItem="n3x-i4-fwd" secondAttribute="top" constant="20" id="I3h-FF-YAC"/>
                             <constraint firstItem="QzA-JH-buL" firstAttribute="leading" secondItem="n3x-i4-fwd" secondAttribute="leading" constant="20" id="NqU-MD-jyS"/>
                             <constraint firstItem="n3x-i4-fwd" firstAttribute="trailing" secondItem="Pqs-ag-sGq" secondAttribute="trailing" id="u91-Kr-BFg"/>
