Data being added and pulled from Realtime Database, bug where initial picker data is not added to Database

--- a/Creative Pod/Base.lproj/Main.storyboard
+++ b/Creative Pod/Base.lproj/Main.storyboard
@@ -656,16 +656,29 @@
                                     <action selector="saveChangesBtn:" destination="lUQ-ke-8ih" eventType="touchUpInside" id="ZMa-ae-9sl"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WC5-SH-ErZ">
+                                <rect key="frame" x="20" y="20" width="53" height="52"/>
+                                <fontDescription key="fontDescription" name="ModeG-Regular" family="Mode G" pointSize="20"/>
+                                <state key="normal" title="BACK">
+                                    <color key="titleColor" red="0.0" green="0.61568627450000002" blue="0.88235294119999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="backButton:" destination="PPR-r4-QXN" eventType="touchUpInside" id="Jiq-5p-Fio"/>
+                                    <action selector="backButtonPressed:" destination="lUQ-ke-8ih" eventType="touchUpInside" id="b2M-AT-jyZ"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="biT-Hb-DZO" firstAttribute="trailing" secondItem="oSM-B5-HVC" secondAttribute="trailing" constant="100" id="6ed-g9-tug"/>
                             <constraint firstItem="9gy-wx-RL9" firstAttribute="leading" secondItem="biT-Hb-DZO" secondAttribute="leading" constant="10" id="Bhu-PX-zbh"/>
                             <constraint firstItem="biT-Hb-DZO" firstAttribute="bottom" secondItem="oSM-B5-HVC" secondAttribute="bottom" constant="40" id="CGu-R5-DkB"/>
+                            <constraint firstItem="WC5-SH-ErZ" firstAttribute="top" secondItem="xiU-9m-94V" secondAttribute="top" constant="20" id="MLI-kY-p7e"/>
                             <constraint firstItem="9gy-wx-RL9" firstAttribute="top" secondItem="biT-Hb-DZO" secondAttribute="top" constant="10" id="P1U-kr-OLX"/>
                             <constraint firstItem="oSM-B5-HVC" firstAttribute="leading" secondItem="biT-Hb-DZO" secondAttribute="leading" constant="100" id="bE0-ac-iuf"/>
                             <constraint firstItem="oSM-B5-HVC" firstAttribute="top" secondItem="9gy-wx-RL9" secondAttribute="bottom" constant="30" id="fbL-3s-lXG"/>
                             <constraint firstItem="biT-Hb-DZO" firstAttribute="trailing" secondItem="9gy-wx-RL9" secondAttribute="trailing" constant="10" id="flM-mM-Xg6"/>
+                            <constraint firstItem="WC5-SH-ErZ" firstAttribute="leading" secondItem="xiU-9m-94V" secondAttribute="leading" constant="20" id="m9w-QY-P8p"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="biT-Hb-DZO"/>
                     </view>
